agregue el proceso de login usando token para las peticiones

--- a/NirvanaMAUIApp/Components/Layout/MainLayout.razor
+++ b/NirvanaMAUIApp/Components/Layout/MainLayout.razor
@@ -1,7 +1,9 @@
-﻿@inherits LayoutComponentBase
+﻿
+@inherits LayoutComponentBase
 
 <MudThemeProvider />
 <MudDialogProvider />
+
 <MudSnackbarProvider />
 
 <MudLayout>
