--- a/NirvanaMAUIApp/Components/Layout/NavMenu.razor
+++ b/NirvanaMAUIApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="home" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
     <MudNavLink Href="almacen" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Almacen</MudNavLink>
+    
 </MudNavMenu>
