Agrege el crud completo de Sucursal

--- a/NirvanaMAUIApp/Components/Layout/NavMenu.razor
+++ b/NirvanaMAUIApp/Components/Layout/NavMenu.razor
@@ -3,5 +3,6 @@
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
     <MudNavLink Href="almacen" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Almacen</MudNavLink>
+    <MudNavLink Href="sucursal" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Sucursal</MudNavLink>
     
 </MudNavMenu>
